--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
 		<repository>
 			<id>OpenNMS</id>
 			<name>OpenNMS Repository</name>
-			<url>http://repo.opennms.org/maven2/</url>
+			<url>https://repo.opennms.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -425,7 +425,7 @@
 			<dependency>
 				<groupId>com.github.dozermapper</groupId>
 				<artifactId>dozer-core</artifactId>
-				<version>6.1.0</version>
+				<version>6.5.2</version>
 			</dependency>
 
 			<!-- Elastic Search -->
@@ -446,17 +446,17 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
-				<version>5.3.20.Final</version>
+				<version>5.6.14.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-entitymanager</artifactId>
-				<version>5.3.20.Final</version>
+				<version>5.6.14.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-ehcache</artifactId>
-				<version>5.3.20.Final</version>
+				<version>5.6.14.Final</version>
 			</dependency>
 
 			<!-- Jackson -->
@@ -464,22 +464,22 @@
 			<dependency>
             	<groupId>com.fasterxml.jackson.core</groupId>
             	<artifactId>jackson-core</artifactId>
-            	<version>2.12.7</version>
+            	<version>2.14.1</version>
 			</dependency>			
 			<dependency>
             	<groupId>com.fasterxml.jackson.core</groupId>
             	<artifactId>jackson-databind</artifactId>
-            	<version>2.12.7</version>
+            	<version>2.14.1</version>
 			</dependency>			
 			<dependency>
     			<groupId>com.fasterxml.jackson.core</groupId>
     			<artifactId>jackson-annotations</artifactId>
-    			<version>2.12.7</version>
+    			<version>2.14.1</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.datatype</groupId>
 				<artifactId>jackson-datatype-jsr310</artifactId>
-				<version>2.9.8</version>
+				<version>2.14.1</version>
 			</dependency>
 
 			<!-- Java EE -->
@@ -505,7 +505,18 @@
 						<groupId>org.codehaus.castor</groupId>
 						<artifactId>castor-xml</artifactId>
 					</exclusion>
+					<exclusion>
+						<groupId>bouncycastle</groupId>
+						<artifactId>*</artifactId>
+					</exclusion>
 				</exclusions>
+			</dependency>
+			
+			<!-- JAsperreports imports itext v2.1.7.js6, which is not available via maven anymore. So use v2.1.7. here. -->
+			<dependency>
+				<groupId>com.lowagie</groupId>
+				<artifactId>itext</artifactId>
+				<version>2.1.7</version>
 			</dependency>
 
 			<!-- Jersey -->
@@ -610,7 +621,7 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-framework-bom</artifactId>
-				<version>5.3.5</version>
+				<version>5.3.25</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -652,7 +663,7 @@
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.3.7</version>
+				<version>42.5.1</version>
 			</dependency>
 
 			<!-- PrimeFaces -->
