--- a/cone_presentation/pom.xml
+++ b/cone_presentation/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>de.mpg.mpdl.inge</groupId>
 		<artifactId>INGe</artifactId>
-		<version>8.5.1</version>
+		<version>8.5.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>cone_presentation</artifactId>
@@ -18,7 +18,7 @@
 		<connection>scm:git:https://github.com/MPDL/INGe.git</connection>
 		<developerConnection>scm:git:https://github.com/MPDL/INGe.git</developerConnection>
 		<url>https://github.com/MPDL/INGe</url>
-		<tag>INGe-8.5.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<profiles>
