--- a/dataacquisition/pom.xml
+++ b/dataacquisition/pom.xml
@@ -33,23 +33,23 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.xmlbeans</groupId>
-				<artifactId>xmlbeans</artifactId>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>xmlbeans-maven-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>xmlbeans</id>
 						<phase>generate-sources</phase>
 						<goals>
-							<goal>compile</goal>
+							<goal>xmlbeans</goal>
 						</goals>
 					</execution>
 				</executions>
 				<inherited>true</inherited>
 				<configuration>
-
+					<javaSource>1.8</javaSource>
 					<noPvr>true</noPvr>
 					<download>true</download>
-					<sourceDir>${project.basedir}/src/main/xsd</sourceDir>
+
 				</configuration>
 			</plugin>
 			<plugin>
