--- a/pom.xml
+++ b/pom.xml
@@ -911,8 +911,8 @@
 					<version>1.3</version>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.xmlbeans</groupId>
-					<artifactId>xmlbeans</artifactId>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>xmlbeans-maven-plugin</artifactId>
 					<version>5.1.1</version>
 				</plugin>
 			</plugins>
