--- a/inge_db_connector/src/main/resources/hibernate.properties
+++ b/inge_db_connector/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 ###hibernate.dialect=de.mpg.mpdl.inge.db.spring.JsonPostgreSQL9Dialect
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
 hibernate.cache.region.factory_class=jcache
 hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheCachingProvider
@@ -8,7 +8,7 @@ hibernate.javax.cache.uri=ehcache.xml
 hibernate.jdbc.time_zone=UTC
 #Speed up startup, do not load all metadata from database
 hibernate.temp.use_jdbc_metadata_defaults=true
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=update
 show_sql=false
 #Use Hibernate 5.3 compatible naming strategy
 hibernate.id.db_structure_naming_strategy=legacy
