--- a/reindex_util/pom.xml
+++ b/reindex_util/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>de.mpg.mpdl.inge</groupId>
 		<artifactId>INGe</artifactId>
-		<version>8.5.3</version>
+		<version>8.5.4-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>reindex_util</artifactId>
@@ -15,7 +15,7 @@
 		<connection>scm:git:https://github.com/MPDL/INGe.git</connection>
 		<developerConnection>scm:git:https://github.com/MPDL/INGe.git</developerConnection>
 		<url>https://github.com/MPDL/INGe</url>
-		<tag>INGe-8.5.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<build>
