--- a/pom.xml
+++ b/pom.xml
@@ -1221,7 +1221,7 @@
 				<inge.cone.subjectVocab>iso639-3;ddc;mpipks;mpirg;mpis-groups;mpis-projects;mpicc-projects</inge.cone.subjectVocab>
 				<inge.csl.javascript.engine>graaljs</inge.csl.javascript.engine>
 				<inge.pubman.blog.baseUrl>newsfeed.pure.mpg.de/</inge.pubman.blog.baseUrl>
-				<inge.pubman.blog.news>https://blog.pure.mpg.de/feed/</inge.pubman.blog.news>
+				<inge.pubman.blog.news>https://blog.pure.mpg.de/json1</inge.pubman.blog.news>
 				<inge.pubman.contact.url>http://colab.mpdl.mpg.de/mediawiki/PubMan_Support</inge.pubman.contact.url>
 				<inge.pubman.handbook.url>https://subversion.mpdl.mpg.de/repos/smc/tags/public/PubMan/Benutzerhandbuch_WebHelp/index.htm</inge.pubman.handbook.url>
 				<inge.pubman.logo.url>/resources/images/pure_logo_web.png</inge.pubman.logo.url>
